# rust_flutter

./: .gitignore  CLAUDE.md  pubspec.yaml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: types.dart  window_monitor.dart
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  types.rs  window_monitor.rs
rust/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
